# zoom-analysis

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-test.yml
cmake/: catch.cmake  cxxopts.cmake  pcap.cmake
data/: Makefile  README.md  frames.Rmd  meetings.Rmd  setup.R  stats.Rmd  streams.Rmd
p4/: README.md
p4/src/: entries_match_campus_destinations.p4inc  entries_match_campus_sources.p4inc  entries_match_zoom_server.p4inc  zoom_capture.p4
p4/test/: receive.py  send.py
p4/zoom_capture_anony/: Makefile  README.md
p4/zoom_capture_anony/config/: sim_port_map.json
p4/zoom_capture_anony/control/: set_egress_port_and_ontas.py
p4/zoom_capture_anony/script/: set_env.bash
p4/zoom_capture_anony/src/: zoom_capture_anony.p4  zoom_capture_anony_fixed.p4  zoom_capture_anony_fixed1.p4  zoom_capture_multistage_anony.p4  zoom_capture_multistage_anony_sde910.p4  zoom_parse_headers.p4
p4/zoom_capture_anony/test/: receive.py  send.py
src/cmd/: zoom_flows.h  zoom_flows_main.cc  zoom_meetings.h  zoom_meetings_main.cc  zoom_rtp.h  zoom_rtp_main.cc
src/lib/: file_stream.h  fps_calculator.cc  fps_calculator.h  jitter_calculator.cc  jitter_calculator.h  mac_counter.cc  mac_counter.h  net.cc  net.h  pcap_file_reader.cc  pcap_file_reader.h  pcap_file_writer.cc  pcap_file_writer.h  pcap_util.h  ring_buffer.h  rtcp.h  rtp.h  rtp_stream_analyzer.h  simple_binary_reader.h  simple_binary_writer.h  util.h  zoom.cc  zoom.h  zoom_analyzer.cc  zoom_analyzer.h  zoom_flow_tracker.cc  zoom_flow_tracker.h  zoom_nets.h  zoom_offline_analyzer.cc  zoom_offline_analyzer.h  zoom_rtp_stream_tracker.cc  zoom_rtp_stream_tracker.h
test/: CMakeLists.txt  mac_counter_test.cc  pcap_file_reader_test.cc  rtcp_test.cc  rtp_test.cc  test_packets.h  unit_main.cc  zoom_flow_tracker_test.cc  zoom_nets_test.cc  zoom_pkt_test.cc  zoom_test.cc
test/data/: .gitignore  capinfos.csv  test0.pcap  test1.pcap  test2.pcap  test3.pcap  test4.pcap  test4_rawip.pcap  test5.pcap  test6.pcap  test7.pcap  zoom_test.pcap  zoom_test.zpkt
wireshark/: README.md  zoom.lua
